--- a/app.json
+++ b/app.json
@@ -1,23 +1,23 @@
 {
-  "name": "Heroku_v2ray",
-  "description": "DaoChen's v2",
+  "name": "HerokuTEST",
+  "description": "Test Project",
   "keywords": [
     ""
   ],
   "env": {
     "PROTOCOL": {
-      "description": "协议VMess或VLESS，请填小写的vmess或vless",
+      "description": "t",
       "value": "vmess",
       "required": true
     },
     "UUID": {
-      "description": "用户的主ID",
+      "description": "ID",
       "value": "",
       "required": false
     },
     "WS_PATH": {
       "description": "websocket路径",
-      "value": "/daochen6",
+      "value": "/helloworld",
       "required": true
     }
   },
